tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__AdvancedCircuitA-AAAAAAAAAAAAAAAAAAAExQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1221,
  "prerequisites": [
    160,
    1478
  ],
  "properties": {
    "auto_claim": false,
    "desc": "EV circuits need an MV Circuit Assembler, so make one.\n\n[note]Shortly after this, all circuit recipes will need a cleanroom, so get started on it![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lAdvanced Circuit Assembler",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    160,
    1478
  ],
  "rewards": [],
  "tasks": []
}
