tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__AutomatedMobFarm-AAAAAAAAAAAAAAAAAAAAlw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 151,
  "prerequisites": [
    148,
    165
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Of course... zombies love that... disgusting liquid (nutrient distillation). While using a small amount per hit, he will attack everything that is within his range with a weapon you give him. That also includes players, so be careful. Rumors are there might be a weapon that will never break when used in this \"machine\"...\n\n[note]BTW you need to be at > 75% to run it.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lAutomated Mob Farming",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    148,
    165
  ],
  "rewards": [],
  "tasks": []
}
