tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__BauxiteSlag-AAAAAAAAAAAAAAAAAAALng==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2974,
  "prerequisites": [
    2977
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now the slurry can be separated in a chemical process. Besides the Alumina which we get directly, the most important part is the Bauxite Slag which we will process further. You can also centrifuge the Sluice Juice for some extra byproducts.\n\nIf you don't have Aluminum Hydroxide yet, look around a bit in NEI. You can get it from Sodium Aluminate or from either Ruby, Sapphire, or Green Sapphire Slurry.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lBauxite Slag",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2977
  ],
  "rewards": [],
  "tasks": []
}
