tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__BiggerBetterChar-AAAAAAAAAAAAAAAAAAAD3A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 988,
  "prerequisites": [
    141
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Vibrant Capacitor Bank is the largest non-creative RF Battery from EIO. It can store 25 million RF in a single block.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lBigger, Better, Chargier?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    141
  ],
  "rewards": [],
  "tasks": []
}
