tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__BioLab-AAAAAAAAAAAAAAAAAAAKBg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2566,
  "prerequisites": [
    2565,
    1814
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Bio Lab is a multi-use bioengineering station. You can create bacterial cultures for use in the Bacterial Vat with it, as well as make DNA Samples and Data Orbs, and Plasmids to duplicate cultures and create new ones.\n\nThe Bacterial Vat can be found in the multiblock Goals tab. You can use it right now if you have any industrial brewing needs or wait until later when you need to get into bioengineering.\n\n[note]If you are only doing this later you might as well make a higher tier Bio Lab. You only need one of them to complete the quest.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lBio Lab",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2565,
    1814
  ],
  "rewards": [],
  "tasks": []
}
